# DES_thermal_model

./: Cargo.toml  test_visualization.py
inputfiles/: Input_file.txt
outputfiles/: mesh_convergence.fig
python/: des_thermal_model.py
src/: gcode_reader.rs  main.rs  model_generator.rs  model_iso_td_shc_td.rs  model_orthotropic_td_shc.rs  model_orthotropic_td_shc_variable_h.rs
